# ProcureVani-AI

./: .env.example  README.md  pyproject.toml  requirements.txt
apps/: __init__.py
apps/agents/: __init__.py  graph.py  llm.py  state.py
apps/agents/nodes/: __init__.py  compliance.py  document.py  extraction.py  fraud.py  gem.py  intent.py
apps/agents/tools/: __init__.py  compliance_messages.py  ipfs.py  ocr.py  ppp_mii.py  stt.py
apps/blockchain/: __init__.py  abi.json  handler.py
apps/blockchain/contracts/: CompliancePassport.sol
apps/dashboard/: next.config.js  package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/stats/: route.ts
apps/dashboard/app/api/verify/[id]/: route.ts
apps/dashboard/app/audit/: page.tsx
apps/dashboard/app/fraud/: page.tsx
apps/dashboard/app/passports/: page.tsx
apps/dashboard/app/verify/: page.tsx
apps/gem_adapter/: __init__.py  submit.py
apps/webhook/: __init__.py  config.py  main.py  session.py  whatsapp.py
apps/webhook/routers/: __init__.py  inbound.py
data/: gem_categories.json  ppp_mii_rules.json
data/languages/: en.json  hi.json  te.json
infra/: Dockerfile  docker-compose.yml
tests/: test_agents.py  test_compliance.py  test_compliance_messages.py  test_compliance_node.py  test_intake.py
