[project]
name = "procurevani"
version = "0.1.0"
description = "Voice-First Agentic WhatsApp + Blockchain Co-Pilot for MSME GeM Compliance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
    "supabase>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "httpx>=0.26.0",
    "web3>=6.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
